feat: API integration admin panel
